[package]
name = "survivor"
version = "0.1.0"
authors = ["OnlyOneFace <13522570308@139.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
actix-web = "3.3.2"
actix-http = "2.2.0"
serde = "1.0.123"
futures-util = "0.3.12"
serde_json = "1.0.62"